--- a/QuanLyTour/Views/Admin/HoTroView.cshtml
+++ b/QuanLyTour/Views/Admin/HoTroView.cshtml
@@ -6,6 +6,14 @@
     ViewData["Title"] = "Quản Lý Hỗ Trợ";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
+<style>
+    .td1 {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 80px;
+    }
+</style>
 
 <section id="main-content">
     <section class="wrapper">
@@ -29,7 +37,7 @@
                             <tr>
                                 <td>@item.Id</td>
                                 <td>@item.MaNguoiDung</td>
-                                <td>@item.Message</td>
+                                <td class="td1">@item.Message</td>
                                 <td>@item.NgayTao.ToString("dd/MM/yyyy")</td>
                             </tr>
                         }
