--- a/QuanLyTour/wwwroot/css/style.css
+++ b/QuanLyTour/wwwroot/css/style.css
@@ -3613,7 +3613,7 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 }
 
 	.trip-option input {
-		margin-right: 8px;
+		margin: 2px 8px;
 	}
 
 .radio-label {
@@ -3635,11 +3635,25 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 .station-input {
 	display: flex;
 	align-items: center;
-	flex: 1;
-	padding: 20px;
+	flex: 1;	
+	padding: 20px 20px;
 	border: 1px solid #ddd;
 	border-radius: 4px;
 	background-color: white;
+}
+
+.datepicker-dropdown {
+	padding: 20px !important; /* Tăng khoảng cách trong popup */
+	min-width: 300px !important; /* Đặt kích thước tối thiểu */
+}
+
+.datepicker table {
+	width: 100%; /* Đảm bảo bảng lịch co giãn phù hợp */
+}
+
+.datepicker td, .datepicker th {
+	padding: 10px !important; /* Tăng kích thước ô ngày */
+	font-size: 16px; /* Làm chữ to hơn */
 }
 
 .swap-button {
@@ -3650,15 +3664,18 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 .fa-train, .fa-exchange, .fa-user, .fa-calendar {
 	color: #666;
 	font-size: 20px;
-	margin-right: 10px;
 }
 
 .station-details, .quantity-details, .date-details {
 	flex: 1;
+	margin-left: 10px;
+	position: relative;
 }
 
 .station-dropdown{
 	border: none;	
+	position: absolute;
+	right: 2px;
 }
 
 .label {
@@ -3677,7 +3694,6 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 }
 
 .ticket-quantity {
-	flex: 1;
 	display: flex;
 	align-items: center;
 	padding: 10px;
@@ -3907,6 +3923,7 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 	border-bottom: 1px solid #eee;
 	padding-bottom: 20px;
 	margin-bottom: 20px;
+	text-align: center;
 }
 
 .review-title {
@@ -4191,14 +4208,8 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 }
 
 	.station-selector .fa {
-		position: absolute;
-		left: 10px;
-		top: 13px;
+		
 		color: #666;
-	}
-
-	.station-selector select {
-		padding-left: 30px;
 	}
 
 .swap-btn {
@@ -4238,9 +4249,8 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 }
 
 .trip-option {
-	flex: 1;
 	text-align: center;
-	padding: 10px 0;
+	padding: 10px 15px;
 	cursor: pointer;
 	border-bottom: 2px solid transparent;
 	font-weight: 500;
