--- a/QuanLyTour/Views/VeTau/ChiTietVeTau.cshtml
+++ b/QuanLyTour/Views/VeTau/ChiTietVeTau.cshtml
@@ -20,8 +20,8 @@
                         <div class="form-group">
                             <label>Chọn chiều đi</label>
                             <div class="direction-selection">
-                                <div class="station-selector">
-                                    <i class="fa fa-train"></i>
+                                <div class="station-selector station-selector-change">
+                                    <i class="fa fa-train icon-change"></i>
                                     <select class="form-control" id="departureStation">
                                         <option value="HNO" selected>Hà Nội (HNO)</option>
                                         <option value="SGO">Sài Gòn (SGO)</option>
@@ -33,8 +33,8 @@
                                 <button class="swap-btn" id="swapStations">
                                     <i class="fa fa-exchange"></i>
                                 </button>
-                                <div class="station-selector">
-                                    <i class="fa fa-train"></i>
+                                <div class="station-selector station-selector-change">
+                                    <i class="fa fa-train icon-change"></i>
                                     <select class="form-control" id="arrivalStation">
                                         <option value="LCA" selected>Lào Cai (LCA)</option>
                                         <option value="HNO">Hà Nội (HNO)</option>
@@ -51,7 +51,7 @@
                         <div class="form-group">
                             <label>Ngày đi</label>
                             <div class="date-input">
-                                <input type="date" class="form-control" id="departDate">
+                                <input type="date" class="form-control form-control" id="departDate">
                             </div>
                         </div>
                     </div>
