--- a/QuanLyTour/Views/VeTau/Index.cshtml
+++ b/QuanLyTour/Views/VeTau/Index.cshtml
@@ -181,36 +181,36 @@
                             <a href="@Url.Action("ChiTietVeTau", "VeTau", new { chuyenTauID = 1 })" class="view-button">Xem</a>
                         </div>
                     </div>
-                    <div class="ticket-card">
-                        <div class="route">
-                            <div class="origin">Hà Nội</div>
-                            <div class="trip-info">
-                                <div class="time">9:25</div>
-                                <div class="arrow">→</div>
-                                <div class="train-code">SE3</div>
-                            </div>
-                            <div class="destination">Đà Nẵng</div>
-                        </div>
-                        <div class="ticket-group">
-                            <div class="price">750.000<span>VNĐ</span></div>
-                            <a href="@Url.Action("ChiTietVeTau", "VeTau", new { chuyenTauID = 2 })" class="view-button">Xem</a>
-                        </div>
-                    </div>
-                    <div class="ticket-card">
-                        <div class="route">
-                            <div class="origin">Sài Gòn</div>
-                            <div class="trip-info">
-                                <div class="time">8:20</div>
-                                <div class="arrow">→</div>
-                                <div class="train-code">SNT2</div>
-                            </div>
-                            <div class="destination">Nha Trang</div>
-                        </div>
-                        <div class="ticket-group">
-                            <div class="price">385.000<span>VNĐ</span></div>
-                            <a href="@Url.Action("ChiTietVeTau", "VeTau", new { chuyenTauID = 3 })" class="view-button">Xem</a>
-                        </div>
-                    </div>
+                    @* <div class="ticket-card"> *@
+                    @*     <div class="route"> *@
+                    @*         <div class="origin">Hà Nội</div> *@
+                    @*         <div class="trip-info"> *@
+                    @*             <div class="time">9:25</div> *@
+                    @*             <div class="arrow">→</div> *@
+                    @*             <div class="train-code">SE3</div> *@
+                    @*         </div> *@
+                    @*         <div class="destination">Đà Nẵng</div> *@
+                    @*     </div> *@
+                    @*     <div class="ticket-group"> *@
+                    @*         <div class="price">750.000<span>VNĐ</span></div> *@
+                    @*         <a href="@Url.Action("ChiTietVeTau", "VeTau", new { chuyenTauID = 2 })" class="view-button">Xem</a> *@
+                    @*     </div> *@
+                    @* </div> *@
+                    @* <div class="ticket-card"> *@
+                    @*     <div class="route"> *@
+                    @*         <div class="origin">Sài Gòn</div> *@
+                    @*         <div class="trip-info"> *@
+                    @*             <div class="time">8:20</div> *@
+                    @*             <div class="arrow">→</div> *@
+                    @*             <div class="train-code">SNT2</div> *@
+                    @*         </div> *@
+                    @*         <div class="destination">Nha Trang</div> *@
+                    @*     </div> *@
+                    @*     <div class="ticket-group"> *@
+                    @*         <div class="price">385.000<span>VNĐ</span></div> *@
+                    @*         <a href="@Url.Action("ChiTietVeTau", "VeTau", new { chuyenTauID = 3 })" class="view-button">Xem</a> *@
+                    @*     </div> *@
+                    @* </div> *@
                 }
             }
             catch (Exception ex)
